Revert 102003 - Merge 99914 - [ntp4] Raise the priority of the 'hidden' attribute; fix visibility of the bookmarks title bar.
(Reverting this CL because it had further dependencies.  For now, we will have to let 97245 stand until we determine how we will fix it...)

BUG=97245
Review URL: http://codereview.chromium.org/7842001

TBR=csilv@chromium.org
Review URL: http://codereview.chromium.org/7976013

TBR=csilv@chromium.org
Review URL: http://codereview.chromium.org/7981013

git-svn-id: svn://svn.chromium.org/chrome/branches/874/src@102013 0039d316-1c4b-4281-b951-d872f2087c98

--- a/chrome/browser/resources/ntp4/new_tab.css
+++ b/chrome/browser/resources/ntp4/new_tab.css
@@ -22,8 +22,7 @@ body {
   -webkit-user-select: none;
 }
 
-/* [hidden] does display:none, but its priority is too low in some cases. */
-[hidden], .hidden {
+.hidden {
   display: none !important;
 }
 
